@@ -8,6 +8,7 @@
  - Update author github username.
  - Update author name.
  - Update copyright years.
+ - Update .travis.yml to reality.
 
 0.08 2015-10-14T11:21:19+02:00
  - Add SEE ALSO section to doc.
